+  uniform cost termination and path cost fix. Time complexity is bad :(